Bug 1627649 - Unable to use WebSocket in Thunderbird. r=benc DONTBUILD